more CTA buttons

--- a/endorsements/index.html
+++ b/endorsements/index.html
@@ -13,7 +13,7 @@
   <!-- Fixed Background Image - stays in place while content scrolls -->
   <div class="fixed inset-0 z-0">
     <!-- Dark overlay for text readability -->
-    <div class="absolute inset-0 bg-blue-900"></div>
+    <div class="absolute inset-0"></div>
   </div>
 
   <main class="mb-12">
@@ -23,11 +23,11 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center !py-16 relative">
 
           <!-- Content with higher z-index to appear above gradient -->
-          <div class="relative z-10">
-            <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-white mb-4 sm:mb-6">
+          <div class="relative z-10 text-blue-900">
+            <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-4 sm:mb-6">
               Endorsements
             </h1>
-            <p class="text-lg sm:text-xl text-white max-w-3xl mx-auto leading-relaxed">
+            <p class="text-lg sm:text-xl max-w-3xl mx-auto leading-relaxed font-bold">
               Lisa is proudly endorsed by these prestigious groups:
             </p>
           </div>
@@ -39,7 +39,7 @@
 
             <!-- Health Professionals and Allied Employees Card -->
             <a href="https://www.hpae.org/" target="_blank" rel="noopener noreferrer"
-              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/HPAE.png" />
@@ -54,7 +54,7 @@
 
             <!-- American Federation of Teachers Card -->
             <a href="https://www.aft.org/" target="_blank" rel="noopener noreferrer"
-              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/AFTNJ-logo.png" />
@@ -69,7 +69,7 @@
 
             <!-- New Jersey State AFL-CIO Card -->
             <a href="https://njaflcio.org/" target="_blank" rel="noopener noreferrer"
-              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white p-2 rounded-lg mb-4 flex items-center justify-center">
                 <img class="bg-gray-600" src="/images/endorsement-logos/AFLCIO.png" />
@@ -84,7 +84,7 @@
 
             <!-- Moms Against Gun Violence Card -->
             <a href="https://momsdemandaction.org/" target="_blank" rel="noopener noreferrer"
-              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/MomsDemandAction.png" />
@@ -99,7 +99,7 @@
 
             <!-- PAM's List Card -->
             <a href="https://www.facebook.com/p/PAMS-List-100068135709525/" target="_blank" rel="noopener noreferrer"
-              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/Pamslist.png" />
@@ -114,7 +114,7 @@
 
             <!-- Planned Parenthood Card -->
             <a href="https://www.plannedparenthood.org/" target="_blank" rel="noopener noreferrer"
-              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                  <img src="/images/endorsement-logos/pp-endorsed.png" />
@@ -129,7 +129,7 @@
 
             <!-- Manchester Township Democratic Club Card -->
             <a href="https://manchesterdems.com/" target="_blank" rel="noopener noreferrer"
-              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/manchester-dems.png" />
@@ -144,7 +144,7 @@
 
             <!-- Democratic Club of Stafford Township Card -->
             <a href="https://staffordnjdems.org/" target="_blank" rel="noopener noreferrer"
-              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/Stafford_Dem_Logo.png" />
@@ -159,7 +159,7 @@
 
             <!-- Ocean County Democratic Committee Card -->
             <a href="https://www.oceancountydems.org/" target="_blank" rel="noopener noreferrer"
-              class="group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white p-2 rounded-lg mb-4 flex items-center justify-center">
                  <img src="/images/endorsement-logos/Blue_Logo_Final.png" />
