--- a/index.html
+++ b/index.html
@@ -13,29 +13,43 @@
   <main>
     <!-- Hero Section with Two Columns - extends behind header -->
     <section class="min-h-screen flex -mt-20 md:-mt-16 ">
-      <!-- Left Column - Dark Green Background with Text -->
-      <div class="w-full lg:w-1/2 bg-green-800 flex items-center justify-center relative">
-        <div class="max-w-lg px-8 sm:px-12 lg:px-16 text-center lg:text-left">
-          <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold text-white mb-6 leading-tight">
-            {{candidateName}}
-          </h1>
-          <h2 class="text-2xl sm:text-3xl lg:text-4xl font-semibold text-green-200 mb-6">
-            for {{office}}
-          </h2>
-          <p class="text-lg sm:text-xl text-white mb-8 leading-relaxed">
-            {{slogan}}
-          </p>
-          <p class="text-base sm:text-lg text-green-100 mb-8 leading-relaxed">
-            {{experience}} bringing progressive leadership and effective solutions to Ocean County.
-          </p>
+      <!-- Left Column - Dark Green Background with Text - Made wider for better proportions -->
+      <div class="w-full lg:w-3/5 bg-green-800 flex items-center justify-center relative">
+        <div class="max-w-4xl px-8 sm:px-12 lg:px-16 pt-[6rem]">
+          <!-- Text and Image Side by Side -->
+          <div class="flex flex-col lg:flex-row items-center lg:items-start gap-8 lg:gap-12">
+            <!-- Text Content -->
+            <div class="flex-1 text-center lg:text-left">
+              <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold text-white mb-6 leading-tight">
+                {{candidateName}}
+              </h1>
+              <h2 class="text-2xl sm:text-3xl lg:text-4xl font-semibold text-green-200 mb-6">
+                for {{office}}
+              </h2>
+              <p class="text-lg sm:text-xl text-white mb-8 leading-relaxed">
+                {{slogan}}
+              </p>
+              <p class="text-base sm:text-lg text-green-100 mb-8 leading-relaxed">
+                {{experience}} bringing progressive leadership and effective solutions to Ocean County.
+              </p>
+            </div>
+
+            <!-- Image -->
+            <div class="flex-shrink-0">
+              <img src="/images/cropped-ld9.png" alt="Legislative District 9" class="w-32 sm:w-40 lg:w-48 h-auto" />
+            </div>
+          </div>
+
 
           <!-- Call-to-Action Buttons -->
           <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start">
             <a href="https://politics.raisethemoney.com/en/lbennettQz0cN3QQlvIxF2wDZpH3yA"
               class="bg-white text-green-800 hover:bg-green-50 font-bold py-3 px-8 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 inline-flex items-center justify-center">
               Donate Now
-              <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+              <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
               </svg>
             </a>
             <a href="issues/"
@@ -49,8 +63,10 @@
             <a href="https://forms.gle/fsD1gwH5ULkb575S6" target="_blank" rel="noopener noreferrer"
               class="bg-transparent border-2 border-white text-white hover:bg-white hover:text-green-800 font-bold py-3 px-8 rounded-lg transition-all duration-300 inline-flex items-center justify-center">
               Volunteer
-              <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+              <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
               </svg>
             </a>
             <button id="meet-lisa-button" type="button"
@@ -66,8 +82,8 @@
         </div>
       </div>
 
-      <!-- Right Column - Image with Gradient Blend -->
-      <div class="hidden lg:block w-1/2 relative">
+      <!-- Right Column - Image with Gradient Blend - Adjusted width to match new left column -->
+      <div class="hidden lg:block w-2/5 relative">
         <!-- Gradient overlay on the left edge of the image -->
         <div class="absolute top-0 left-0 w-32 h-full bg-gradient-to-r from-green-800 to-transparent z-10"></div>
         <img src="/images/jacket.JPG" alt="Lisa Bennett, candidate for New Jersey Assembly Legislative District 9"
