--- a/index.html
+++ b/index.html
@@ -107,21 +107,28 @@
 
                 <div class="space-y-4 text-lg text-gray-600 leading-relaxed">
                   <p>
-                    Foo
+                    I am committed to being your voice in the New Jersey State Assembly, representing all residents of
+                    Legislative District 9 in Ocean County.
                   </p>
 
                   <p>
-                    Foo
+                    Throughout my career as a paralegal, I have been a dedicated advocate for the people, and I will
+                    continue that commitment if elected. Affordability is a top concern for everyone in our community.
+                    Seniors are struggling to stay in their homes, and young families find it difficult to buy their
+                    first home.
                   </p>
 
                   <p>
-                    Foo
+                    Our legislature must prioritize reducing the cost of living. By providing property tax
+                    relief, holding utility companies accountable, and developing solutions for affordable childcare and
+                    healthcare, we can make meaningful progress toward these goals.
                   </p>
 
-                  <p class="text-blue-600 font-semibold">
+                  <!-- possible quote section here -->
+                  <!-- <p class="text-blue-600 font-semibold">
                     "I'm running because I believe our community deserves leadership that listens, acts, and delivers
-                    results for every family in Ward 1."
-                  </p>
+                    results for every family in LD9."
+                  </p> -->
                 </div>
 
                 <!-- Key Qualifications -->
@@ -136,7 +143,7 @@
                             clip-rule="evenodd" />
                         </svg>
                       </div>
-                      <span class="text-gray-600">15+ Years Community Service</span>
+                      <span class="text-gray-600">Stafford Resident since 2012</span>
                     </div>
 
                     <div class="flex items-start space-x-3">
@@ -147,7 +154,7 @@
                             clip-rule="evenodd" />
                         </svg>
                       </div>
-                      <span class="text-gray-600">Local Government Experience</span>
+                      <span class="text-gray-600">Notary Public</span>
                     </div>
 
                     <div class="flex items-start space-x-3">
@@ -158,18 +165,7 @@
                             clip-rule="evenodd" />
                         </svg>
                       </div>
-                      <span class="text-gray-600">Over 40 Year in Finance</span>
-                    </div>
-
-                    <div class="flex items-start space-x-3">
-                      <div class="w-6 h-6 bg-blue-100 rounded-full flex items-center justify-center flex-shrink-0 mt-1">
-                        <svg class="w-3 h-3 text-blue-600" fill="currentColor" viewBox="0 0 20 20">
-                          <path fill-rule="evenodd"
-                            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                            clip-rule="evenodd" />
-                        </svg>
-                      </div>
-                      <span class="text-gray-600">Ward 1 Resident</span>
+                      <span class="text-gray-600">Stafford Township Democratic Municipal Committee Vice Chair - District 1</span>
                     </div>
                   </div>
                 </div>
