--- a/endorsements/index.html
+++ b/endorsements/index.html
@@ -44,7 +44,7 @@
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/HPAE.png" />
               </div>
-              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Health Professionals and Allied Employees (HPAE)
               </h3>
               <p class="text-white/80 text-sm">
@@ -59,7 +59,7 @@
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/AFTNJ-logo.png" />
               </div>
-              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 American Federation of Teachers (AFTNJ)
               </h3>
               <p class="text-white/80 text-sm">
@@ -74,7 +74,7 @@
               <div class="w-full bg-white p-2 rounded-lg mb-4 flex items-center justify-center">
                 <img class="bg-gray-600" src="/images/endorsement-logos/AFLCIO.png" />
               </div>
-              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 New Jersey State AFL-CIO
               </h3>
               <p class="text-white/80 text-sm">
@@ -89,7 +89,7 @@
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/MomsDemandAction.png" />
               </div>
-              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Moms Against Gun Violence
               </h3>
               <p class="text-white/80 text-sm">
@@ -104,7 +104,7 @@
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/Pamslist.png" />
               </div>
-              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 PAM's List
               </h3>
               <p class="text-white/80 text-sm">
@@ -119,7 +119,7 @@
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                  <img src="/images/endorsement-logos/pp-endorsed.png" />
               </div>
-              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Planned Parenthood
               </h3>
               <p class="text-white/80 text-sm">
@@ -134,7 +134,7 @@
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/manchester-dems.png" />
               </div>
-              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Manchester Township Democratic Club
               </h3>
               <p class="text-white/80 text-sm">
@@ -149,7 +149,7 @@
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                 <img src="/images/endorsement-logos/Stafford_Dem_Logo.png" />
               </div>
-              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Democratic Club of Stafford Township
               </h3>
               <p class="text-white/80 text-sm">
@@ -164,7 +164,7 @@
               <div class="w-full bg-white p-2 rounded-lg mb-4 flex items-center justify-center">
                  <img src="/images/endorsement-logos/Blue_Logo_Final.png" />
               </div>
-              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors">
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Ocean County Democratic Committee
               </h3>
               <p class="text-white/80 text-sm">
