email changes; background blue-900

--- a/endorsements/index.html
+++ b/endorsements/index.html
@@ -53,7 +53,7 @@
             </a>
 
             <!-- American Federation of Teachers Card -->
-            <a href="https://www.aft.org/" target="_blank" rel="noopener noreferrer"
+            <a href="https://aftnj.org/" target="_blank" rel="noopener noreferrer"
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
@@ -82,7 +82,7 @@
               </p>
             </a>
 
-            <!-- Moms Against Gun Violence Card -->
+            <!-- Moms Demand Action Card -->
             <a href="https://momsdemandaction.org/" target="_blank" rel="noopener noreferrer"
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
@@ -90,7 +90,7 @@
                 <img src="/images/endorsement-logos/MomsDemandAction.png" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
-                Moms Against Gun Violence
+                Moms Demand Action
               </h3>
               <p class="text-white/80 text-sm">
                 Working to end gun violence and create safer communities for all families.
@@ -113,14 +113,14 @@
             </a>
 
             <!-- Planned Parenthood Card -->
-            <a href="https://www.plannedparenthood.org/" target="_blank" rel="noopener noreferrer"
+            <a href="https://www.plannedparenthoodaction.org/planned-parenthood-action-fund-new-jersey-inc" target="_blank" rel="noopener noreferrer"
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
                  <img src="/images/endorsement-logos/pp-endorsed.png" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
-                Planned Parenthood
+                Planned Parenthood Action Fund of NJ
               </h3>
               <p class="text-white/80 text-sm">
                 Protecting reproductive rights and healthcare access for all.
@@ -169,6 +169,21 @@
               </h3>
               <p class="text-white/80 text-sm">
                 The official Democratic Party organization for Ocean County, New Jersey.
+              </p>
+            </a>
+
+            <!-- Women's Political Caucus of New Jersey Card -->
+            <a href="https://wpcnj.org/" target="_blank" rel="noopener noreferrer"
+              class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
+              <!-- Placeholder for logo/image -->
+              <div class="w-full bg-white p-2 rounded-lg mb-4 flex items-center justify-center">
+                 <img src="/images/endorsement-logos/WPCNJ-logo.png" />
+              </div>
+              <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
+                Women's Political Caucus of New Jersey
+              </h3>
+              <p class="text-white/80 text-sm">
+                Dedicated to increasing womens' participation in the political process
               </p>
             </a>
 
