--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
           
           <!-- Bottom Right: Legislative District Badge -->
           <div class="flex items-center justify-center">
-            <img src="/images/cropped-ld9.png" alt="Legislative District 9" class="w-[8rem] h-auto" />
+            <a href="district/">
+              <img src="/images/cropped-ld9.png" alt="Legislative District 9" class="w-[8rem] h-auto" />
+            </a>
           </div>
         </div>
       </div>
@@ -106,7 +108,9 @@
 
             <!-- Image -->
             <div class="flex-shrink-0 pr-4">
-              <img src="/images/cropped-ld9.png" alt="Legislative District 9" class="w-32 sm:w-40 lg:w-48 h-auto" />
+              <a href="district/">
+                <img src="/images/cropped-ld9.png" alt="Legislative District 9" class="w-32 sm:w-40 lg:w-48 h-auto" />
+              </a>
             </div>
           </div>
 
