--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             <!-- Image -->
             <div class="flex-shrink-0 pr-4">
-              <a href="district/">
+              <a href="district/" class="block hover:scale-105 hover:shadow-lg hover:drop-shadow-lg transition-all duration-300 ease-in-out rounded-lg hover:bg-blue-50 hover:bg-opacity-20 p-2 hover:cursor-pointer">
                 <img src="/images/cropped-ld9.png" alt="Legislative District 9" class="w-32 sm:w-40 lg:w-48 h-auto" />
               </a>
             </div>
