--- a/endorsements/index.html
+++ b/endorsements/index.html
@@ -108,7 +108,7 @@
                 PAM's List
               </h3>
               <p class="text-white/80 text-sm">
-                Supporting progressive women candidates in New Jersey politics.
+                Supporting women candidates in New Jersey politics.
               </p>
             </a>
 
@@ -138,7 +138,7 @@
                 Manchester Township Democratic Club
               </h3>
               <p class="text-white/80 text-sm">
-                Local Democratic organization supporting progressive candidates and values.
+                Local Democratic organization supporting results-driven candidates and values.
               </p>
             </a>
 
