--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               {{slogan}}
             </p>
             <p class="text-xs text-blue-100 leading-relaxed">
-              Bringing progressive leadership and effective solutions to Ocean County.
+              Bringing innovative leadership and effective solutions to Ocean County.
             </p>
           </div>
           
@@ -102,7 +102,7 @@
                 {{slogan}}
               </p>
               <p class="text-base sm:text-lg text-blue-100 mb-8 leading-relaxed">
-                Bringing progressive leadership and effective solutions to Ocean County.
+                Bringing innovative leadership and effective solutions to Ocean County.
               </p>
             </div>
 
